# ocpp_client

./: .gitignore  CAN.c  CMakeLists.txt  Client.c  Client.h  Config.c  README.md  config.json  main.c  start_ocpp.sh
include/: CAN.h  Client.h  Config.h  Utils.h
src/: CAN.c  Client.c  Config.c
